kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zradirani
  labels:
    app: zradirani
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zradirani
  template:
    metadata:
      labels:
        app: zradirani
    spec:
      containers:
      - name: zradirani
        image: zradirani
        ports:
        - containerPort: 7331
