kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zradirani
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - zradirani-metelkova6.djnd.si
        - zradirani-metelkova6.danesjenovdan.si
      secretName: zradirani-tls
  rules:
    - host: zradirani-metelkova6.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zradirani
                port:
                  number: 80
    - host: zradirani-metelkova6.danesjenovdan.si
      http: *http_paths
